# formal-verification-learning

./: .gitignore  README.md  language.k
MichaelScottQueue/: CMakeLists.txt  LTL.fml  README.md  main.cc  model.hoa  verify.py
MichaelScottQueue/src/: MichaelScottQueue.hpp  main.cc
PlusCal/: lockFreeQueue.tla  queue.tla
k-framework/tests/: 1.spl  read.spl
tests/: 2.spl  fib.spl
